Правит модальное окно, отступы по pixel perfect

--- a/catalog.html
+++ b/catalog.html
@@ -22,7 +22,7 @@
               <a class="navigation-link" href="#">О Седоне</a>
             </li>
             <li class="navigation-item">
-              <a class="navigation-link current" aria-current="page" href="catalog.html">Гостиницы</a>
+              <a class="navigation-link current" aria-current="page">Гостиницы</a>
             </li>
           </ul>
           <ul class="navigation-list navigation-user">
@@ -64,23 +64,24 @@
                 <ul class="infrastructure-filter-list">
                   <li class="infrastructure-filter-item">
                     <label class="control">
-                      <input class="control-input visually-hidden" name="infrastructure-feature" type="checkbox" value="swimming-pool"
-                        checked>
+                      <input class="control-input visually-hidden" name="infrastructure-feature" type="checkbox"
+                        value="swimming-pool" checked>
                       <span class="control-mark"></span>
                       <span class="control-label">Бассейн</span>
                     </label>
                   </li>
                   <li class="infrastructure-filter-item">
                     <label class="control">
-                      <input class="control-input visually-hidden" name="infrastructure-feature" type="checkbox" value="parking"
-                        checked>
+                      <input class="control-input visually-hidden" name="infrastructure-feature" type="checkbox"
+                        value="parking" checked>
                       <span class="control-mark"></span>
                       <span class="control-label">Парковка</span>
                     </label>
                   </li>
                   <li class="infrastructure-filter-item">
                     <label class="control">
-                      <input class="control-input visually-hidden" name="infrastructure-feature" type="checkbox" value="wi-fi">
+                      <input class="control-input visually-hidden" name="infrastructure-feature" type="checkbox"
+                        value="wi-fi">
                       <span class="control-mark"></span>
                       <span class="control-label">Wi-Fi</span>
                     </label>
@@ -93,7 +94,8 @@
                 <ul class="infrastructure-filter-list">
                   <li class="infrastructure-filter-item">
                     <label class="control">
-                      <input class="control-input visually-hidden" name="accommodation-type" type="radio" value="hotel" checked>
+                      <input class="control-input visually-hidden" name="accommodation-type" type="radio" value="hotel"
+                        checked>
                       <span class="control-mark"></span>
                       <span class="control-label">Гостиница</span>
                     </label>
@@ -109,8 +111,8 @@
                     <label class="control">
                       <input class="control-input visually-hidden" name="accommodation-type" type="radio"
                         value="appartments">
-                        <span class="control-mark"></span>
-                        <span class="control-label">Аппартаменты</span>
+                      <span class="control-mark"></span>
+                      <span class="control-label">Аппартаменты</span>
                     </label>
                   </li>
                 </ul>
