--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <li class="bridge-advantage">
               <div class="devil-bridge white-text-inner">
 
-                <h3 class="advantage-title white-title">Там есть мост дьявола</h3>
+                <h3 class="advantage-title white-title">Там есть <br> мост дьявола</h3>
                 <p class="advantage-text">
                   Да, по нему можно пройти! Если вы осмелитесь, разумеется
                 </p>
@@ -147,7 +147,7 @@
 
               <h3 class="recomendation-title">Сувениры</h3>
               <p class="recomendation-text">
-                Не только китайского, но и настоящего местного производства!
+                Не только китайского, <br> но и настоящего местного производства!
               </p>
 
             </li>
@@ -238,9 +238,10 @@
         </section>
       </footer>
     </div>
+
     <div class="modal-container modal-container-close">
       <div class="modal modal-hotel-search">
-        <button class="modal-close-button">
+        <button class="modal-close-button" type="button">
           <span class="visually-hidden">Закрыть</span>
         </button>
         <section class="modal-content">
@@ -250,33 +251,71 @@
               <label class="hotel-search-label date-label" for="check-in-date">
                 Дата заезда:
                 <input class="date-field field" type="text" id="check-in-date" name="check-in-date"
-                  value="27 апреля 2020" required>
+                  value="27 апреля 2020" placeholder="Укажите дату" required>
               </label>
-            <span class="error-text error-past">Мы не можем отправить вас в прошлое.</span>
+              <span class="error-text error-past">Мы не можем отправить вас в прошлое.</span>
             </p>
             <p class="field-group">
               <label class="hotel-search-label date-label" for="check-out-date">
                 Дата выезда:
                 <input class="date-field field" type="text" id="check-out-date" name="check-out-date"
-                value="1 сентября 2021" required>
+                  value="1 сентября 2021" placeholder="Укажите дату" required>
               </label>
-            <span class="error-text">На эти даты есть свободные номера. Пока есть.</span>
+              <span class="error-text">На эти даты есть свободные номера. Пока есть.</span>
             </p>
             <div class="guests-number-wrapper">
-            <p class="field-group">
-              <label class="hotel-search-label guests-number-label" for="adults">
-                Взрослые:
-                <input class="guests-number-field field" type="number" id="adults" name="adults-number" value="2" min="1"
-                  required>
-              </label>
-            </p>
-            <p class="field-group">
-              <label class="hotel-search-label guests-number-label" for="kids">
-                <span class="kids-label">Дети:</span>
-                <input class="guests-number-field field" type="number" id="kids" name="kids-number" value="2" min="0"
-                  required>
-              </label>
-            </p>
+              <p class="field-group">
+                <label class="hotel-search-label guests-number-label" for="adults">
+                  <span class="adults-label">Взрослые:</span>
+                  <button class="reduce-guest-number-button button" type="button">
+                    <svg class="minus-svg" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none"
+                      viewBox="0 0 20 20">
+                      <path fill="#756157" fill-opacity=".3" d="M3 9v2h14V9H3Z" />
+                    </svg>
+                  </button>
+                  <input class="guests-number-field field" type="number" id="adults" name="adults-number" value="2"
+                    min="1" max="99" placeholder="2" required>
+                  <button class="increase-guest-number-button button" type="button">
+                    <svg class="plus-svg" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none"
+                      viewBox="0 0 20 20">
+                      <path fill="#756157" fill-opacity=".3" d="M17 9h-6V3H9v6H3v2h6v6h2v-6h6V9Z" />
+                    </svg>
+                  </button>
+                </label>
+              </p>
+              <p class="field-group">
+                <label class="hotel-search-label guests-number-label" for="kids">
+                  <span class="kids-label">Дети:</span>
+                  <span class="tooltip">
+                    <button class="tooltip-toggle" type="button" aria-labelledby="clue-of-kids">
+                      <span class="visually-hidden">Подсказка</span>
+                      <svg class="tooltip-icon" xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="none"
+                        viewBox="0 0 26 26">
+                        <circle cx="13" cy="13" r="13" fill="#83B3D3" />
+                        <path fill="#fff" fill-rule="evenodd" d="M12 7h2v2h-2V7Zm2 12h-2v-9h2v9Z" clip-rule="evenodd" />
+                      </svg>
+                    </button>
+                    <span class="tooltip-text" role="tooltip" id="clue-of-kids">
+                      Укажите количество детей, которые будут с вами, возраст которых от 6 до 18 лет. Дети до 6 лет
+                      размещаются бесплатно.
+                    </span>
+                  </span>
+                  <button class="reduce-guest-number-button button" type="button">
+                    <svg class="minus-svg" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none"
+                      viewBox="0 0 20 20">
+                      <path fill="#756157" fill-opacity=".3" d="M3 9v2h14V9H3Z" />
+                    </svg>
+                  </button>
+                  <input class="guests-number-field field" type="number" id="kids" name="kids-number" value="2" min="0"
+                    max="99" placeholder="0" required>
+                  <button class="increase-guest-number-button button" type="button">
+                    <svg class="plus-svg" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none"
+                      viewBox="0 0 20 20">
+                      <path fill="#756157" fill-opacity=".3" d="M17 9h-6V3H9v6H3v2h6v6h2v-6h6V9Z" />
+                    </svg>
+                  </button>
+                </label>
+              </p>
             </div>
             <button class="button modal-hotel-search-button" type="submit">Найти</button>
           </form>
