Исправляет дублирование класса

--- a/catalog.html
+++ b/catalog.html
@@ -235,7 +235,7 @@
             </li>
 
             <li class="hotel-card">
-              <a class="hotel-link" class="hotel-image-link" href="#">
+              <a class="hotel-link" href="#">
                 <img class="hotel-image" src="images/catalog/desert-quail-inn.jpg" width="300" height="212" alt="Отель">
               </a>
               <a class="hotel-link" href="#">
