--- a/index.html
+++ b/index.html
@@ -249,26 +249,26 @@
         <section class="modal-content">
           <h2 class="modal-title">Поиск гостиницы в Седоне</h2>
           <form class="hotel-search-form" action="https://echo.htmlacademy.ru/" method="get">
-            <p class="field-group">
+            <div class="field-group">
               <label class="hotel-search-label date-label" for="check-in-date">
                 Дата заезда:
                 <input class="date-field field" type="text" id="check-in-date" name="check-in-date"
                   value="27 апреля 2020" placeholder="Укажите дату" required>
               </label>
               <span class="error-text error-past">Мы не можем отправить вас в прошлое.</span>
-            </p>
-            <p class="field-group">
+            </div>
+            <div class="field-group">
               <label class="hotel-search-label date-label" for="check-out-date">
                 Дата выезда:
                 <input class="date-field field" type="text" id="check-out-date" name="check-out-date"
                   value="1 сентября 2021" placeholder="Укажите дату" required>
               </label>
               <span class="error-text">На эти даты есть свободные номера. Пока есть.</span>
-            </p>
+            </div>
             <div class="guests-number-wrapper">
-              <p class="field-group">
-                <label class="hotel-search-label guests-number-label" for="adults">
-                  <span class="adults-label">Взрослые:</span>
+              <div class="field-group number-fields">
+                <label class="hotel-search-label guests-number-label adults-label" for="adults">Взрослые:</label>
+                <div class="number-field-wrapper">
                   <button class="reduce-guest-number-button button" type="button">
                     <svg class="minus-svg" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none"
                       viewBox="0 0 20 20">
@@ -283,25 +283,25 @@
                       <path fill="#756157" fill-opacity=".3" d="M17 9h-6V3H9v6H3v2h6v6h2v-6h6V9Z" />
                     </svg>
                   </button>
-                </label>
-              </p>
-              <p class="field-group">
-                <label class="hotel-search-label guests-number-label" for="kids">
-                  <span class="kids-label">Дети:</span>
-                  <span class="tooltip">
-                    <button class="tooltip-toggle" type="button" aria-labelledby="clue-of-kids">
-                      <span class="visually-hidden">Подсказка</span>
-                      <svg class="tooltip-icon" xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="none"
-                        viewBox="0 0 26 26">
-                        <circle cx="13" cy="13" r="13" fill="#83B3D3" />
-                        <path fill="#fff" fill-rule="evenodd" d="M12 7h2v2h-2V7Zm2 12h-2v-9h2v9Z" clip-rule="evenodd" />
-                      </svg>
-                    </button>
-                    <span class="tooltip-text" role="tooltip" id="clue-of-kids">
-                      Укажите количество детей, которые будут с вами, возраст которых от 6 до 18 лет. Дети до 6 лет
-                      размещаются бесплатно.
-                    </span>
+                </div>
+              </div>
+              <div class="field-group number-fields kids-group">
+                <label class="hotel-search-label guests-number-label kids-label" for="kids">Дети:</label>
+                <span class="tooltip">
+                  <button class="tooltip-toggle" type="button" aria-labelledby="clue-of-kids">
+                    <span class="visually-hidden">Подсказка</span>
+                    <svg class="tooltip-icon" xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="none"
+                      viewBox="0 0 26 26">
+                      <circle cx="13" cy="13" r="13" fill="#83B3D3" />
+                      <path fill="#fff" fill-rule="evenodd" d="M12 7h2v2h-2V7Zm2 12h-2v-9h2v9Z" clip-rule="evenodd" />
+                    </svg>
+                  </button>
+                  <span class="tooltip-text" role="tooltip" id="clue-of-kids">
+                    Укажите количество детей, которые будут с вами, возраст которых от 6 до 18 лет. Дети до 6 лет
+                    размещаются бесплатно.
                   </span>
+                </span>
+                <div class="number-field-wrapper">
                   <button class="reduce-guest-number-button button" type="button">
                     <svg class="minus-svg" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none"
                       viewBox="0 0 20 20">
@@ -316,8 +316,8 @@
                       <path fill="#756157" fill-opacity=".3" d="M17 9h-6V3H9v6H3v2h6v6h2v-6h6V9Z" />
                     </svg>
                   </button>
-                </label>
-              </p>
+                </div>
+              </div>
             </div>
             <button class="button modal-hotel-search-button" type="submit">Найти</button>
           </form>
