Добавляет правки по отступам

--- a/catalog.html
+++ b/catalog.html
@@ -114,12 +114,11 @@
                       <input class="control-input visually-hidden" name="accommodation-type" type="radio"
                         value="appartments">
                       <span class="control-mark"></span>
-                      <span class="control-label">Аппартаменты</span>
+                      <span class="control-label">Апартаменты</span>
                     </label>
                   </li>
                 </ul>
               </fieldset>
-
 
               <fieldset class="hotel-filter-group price-filter-group">
                 <legend class="infrastructure-title">Стоимость, ₽:</legend>
